--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/divCells.css">
 </head>
 
 <body>
-    <p>Hello world!</p>
+    <p class="Header">SUDOKU</p>
 </body>
-<script src="js/script.js">
+
+<!--<script src="js/script.js"></script>-->
+<script src="js/sudokuGenerator.js"></script>
     
-</script>
 
 </html>
