--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/divCells.css">
-</head>
-
-<body>
-    <p class="Header">SUDOKU</p>
-</body>
-
-<!--<script src="js/script.js"></script>-->
-<script src="js/sudokuGenerator.js"></script>
-    
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/divCells.css">
+        <link rel="stylesheet" href="css/divMiniCells.css">
+    </head>
+    <body>
+        <p class="Header">SUDOKU</p>
+    </body>
+    <script src="js/sudokuGenerator.js"></script>
 </html>
