--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
     <body>
         <p class="Header">SUDOKU</p>
     </body>
-    <script src="js/sudokuGenerator.js"></script>
+    <script type="module" src="js/main.js"></script>
 </html>
